# hpm-hal

./: .gitignore  Cargo.toml  HPMicro.yaml  README.md  build.rs  device.x  link-xip.x  memory.x  openocd.gdb  run-openocd.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
examples/: blinky.rs  blocking_spi.rs  button.rs  demo.rs  embassy_blinky.rs  i2c_oled.rs  pll_setting.rs  raw.rs  raw2.rs  raw_uart.rs  uart_hello.rs
examples/hpm5300evk/: Cargo.toml  build.rs  link-fixed.x  memory.x
examples/hpm5300evk/.cargo/: config.toml
examples/hpm6200evk/: Cargo.toml  link-fixed.x  memory-ram.x  memory-xip.x
examples/hpm6200evk/.cargo/: config.toml
examples/hpm6300evk/: Cargo.toml  memory-ram.x  memory-xip.x  memory.x
examples/hpm6300evk/.cargo/: config.toml
examples/hpm6750evkmini/: Cargo.toml  build.rs  memory-ram.x  memory-xpi.x  memory.x  openocd-semihosting.gdb  openocd.gdb  riscv32imafdcp-unknown-none-elf.json
examples/hpm6750evkmini/.cargo/: config.toml
examples/hpm6750evkmini/src/: lib.rs
examples/hpm6e00evk/: Cargo.toml  memory.x
examples/hpm6e00evk/.cargo/: config.toml
src/: dac.rs  delay.rs  femc.rs  gpio.rs  lib.rs  macros.rs  mbx.rs  mcan.rs  patches.rs  peripherals.rs  qei.rs  rng.rs  rt.rs  rtc.rs  signature.rs  sysctl.rs  temp.rs  trgm.rs  uart.rs
src/adc/: mod.rs
src/dma/: dma.rs  dmamux.rs  mod.rs  util.rs  v1.rs  v2.rs  word.rs
src/embassy/: mod.rs  time_driver_mchtmr.rs
src/flash/: mod.rs  romapi.rs
src/gpio/: input_future.rs  mod.rs
src/i2c/: mod.rs
src/internal/: interrupt.rs  mod.rs
src/patches/: hpm53.rs  hpm62.rs  hpm63.rs  hpm67.rs  hpm68.rs  hpm6e.rs  mod.rs
src/spi/: enums.rs  mod.rs  mod_backup.rs
src/sysctl/: mod.rs  pll.rs  v53.rs  v62.rs  v63.rs  v67.rs  v68.rs  v6e.rs
src/uart/: mod.rs
src/usb/: bus.rs  control_pipe.rs  dcd.rs  device.rs  endpoint.rs  hcd.rs  host.rs  mod.rs  types_v53.rs  types_v53.yaml  types_v62.rs  types_v62.yaml
