[package]
name = "hpm5361-hal"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/hpm-hal"
documentation = "https://docs.rs/hpm5361-hal"
homepage = "https://github.com/andelf/hpm-hal"
categories = []
description = "HAL crate for HPM5300 series RISC-V MCUs, HPM5361, HPM5331, HPM5321, HPM5301"
keywords = []
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
riscv = { version = "0.11", features = ["critical-section-single-hart"] }
embedded-hal = { version = "1.0.0" }
hpm5361-pac = { version = "0.0.3", features = [
    "critical-section",
], path = "../hpm5361-pac" }
critical-section = "1.1.2"
fugit = "0.3.7"


embassy-time-driver = { version = "0.1.0", features = [
    "tick-hz-1_000_000",
], optional = true }
embassy-sync = { version = "0.5.0", optional = true }
embassy-futures = { version = "0.1.1", optional = true }
fixed = "1.25.1"


[features]
default = ["embassy"]

hpm5300evk = []
hpm5301evklite = []
embassy = [
    "dep:embassy-sync",
    "dep:embassy-futures",
    "dep:embassy-time-driver",
]

[dev-dependencies]
panic-halt = "0.2.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
