[package]
name = "hpm-hal"
version = "0.0.1"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/hpmicro-rs/hpm-hal"
documentation = "https://docs.rs/hpm-hal"
homepage = "https://github.com/hpmicro/hpm-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL crate for HPMicro's RISC-V MCUs, HPM5300, HPM6700/HPM6400, HPM6200, HPM6300, HPM6800"
keywords = ["hpmicro", "riscv", "hal"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
# hpm-metapac = { path = "../hpm-data/build/hpm-metapac" }
hpm-metapac = { version = "0.0.3", git = "https://github.com/hpmicro-rs/hpm-metapac.git", tag = "hpm-data-6740ca6fd1ed6d9bb57944b42aa299761b974713" }

riscv = { version = "0.11", features = ["critical-section-single-hart"] }
embedded-hal = { version = "1.0.0" }

embassy-time-driver = { version = "0.1.0", features = [
    "tick-hz-1_000_000",
], optional = true }
embassy-sync = { version = "0.6.0", optional = true }
embassy-futures = { version = "0.1.1", optional = true }
embassy-hal-internal = { version = "0.2.0", default-features = false }
embassy-time = { version = "0.3.0", optional = true }
critical-section = "1.1.2"

riscv-rt = { version = "0.12.2", optional = true }

static_assertions = "1"

defmt = { version = "0.3.8", optional = true }
embedded-io = "0.6.1"
nb = "1.1.0"
futures-util = { version = "0.3.30", optional = true, default-features = false }
embedded-hal-nb = "1.0.0"
embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"
chrono = { version = "0.4.38", default-features = false, optional = true }
mcan = { version = "0.5.0", optional = true }


[build-dependencies]
# hpm-metapac = { path = "../hpm-data/build/hpm-metapac", default-features = false, features = [
#     "metadata",
# ] }
hpm-metapac = { version = "0.0.3", git = "https://github.com/hpmicro-rs/hpm-metapac.git", tag = "hpm-data-6740ca6fd1ed6d9bb57944b42aa299761b974713", default-features = false, features = [
    "metadata",
] }
proc-macro2 = "1.0.85"
quote = "1.0.15"

[features]
default = ["rt", "embassy", "defmt", "time"]

rt = ["dep:riscv-rt", "hpm-metapac/rt"]
defmt = ["dep:defmt"]
time = ["dep:embassy-time"]
chrono = ["dep:chrono"]

embassy = [
    "dep:embassy-sync",
    "dep:embassy-futures",
    "dep:embassy-time-driver",
    "dep:futures-util",
]

mcan = ["dep:mcan"]

hpm5301 = ["hpm-metapac/hpm5301"]
hpm5321 = ["hpm-metapac/hpm5321", "mcan"]
hpm5331 = ["hpm-metapac/hpm5331"]
hpm5361 = ["hpm-metapac/hpm5361", "mcan"]
hpm6220 = ["hpm-metapac/hpm6220"]
hpm6240 = ["hpm-metapac/hpm6240", "mcan"]
hpm6260 = ["hpm-metapac/hpm6260", "mcan"]
hpm6264 = ["hpm-metapac/hpm6264", "mcan"]
hpm6280 = ["hpm-metapac/hpm6280", "mcan"]
hpm6284 = ["hpm-metapac/hpm6284", "mcan"]
hpm6320 = ["hpm-metapac/hpm6320"]
hpm6330 = ["hpm-metapac/hpm6330"]
hpm6340 = ["hpm-metapac/hpm6340"]
hpm6350 = ["hpm-metapac/hpm6350"]
hpm6360 = ["hpm-metapac/hpm6360"]
hpm6364 = ["hpm-metapac/hpm6364"]
hpm6420 = ["hpm-metapac/hpm6420"]
hpm6430 = ["hpm-metapac/hpm6430"]
hpm6450 = ["hpm-metapac/hpm6450"]
hpm6454 = ["hpm-metapac/hpm6454"]
hpm64a0 = ["hpm-metapac/hpm64a0"]
hpm64g0 = ["hpm-metapac/hpm64g0"]
hpm6730 = ["hpm-metapac/hpm6730"]
hpm6750 = ["hpm-metapac/hpm6750"]
hpm6754 = ["hpm-metapac/hpm6754"]
hpm6830 = ["hpm-metapac/hpm6830", "mcan"]
hpm6850 = ["hpm-metapac/hpm6850", "mcan"]
hpm6880 = ["hpm-metapac/hpm6880", "mcan"]
hpm6e50 = ["hpm-metapac/hpm6e50", "mcan"]
hpm6e60 = ["hpm-metapac/hpm6e60", "mcan"]
hpm6e70 = ["hpm-metapac/hpm6e70", "mcan"]
hpm6e80 = ["hpm-metapac/hpm6e80", "mcan"]
