[package]
name = "hpm5300evk"
version = "0.1.0"
edition = "2021"

[dependencies]
# hpm5301 is a subset of hpm5361, either is ok if you have the 5301 board.
hpm-hal = { path = "../..", features = [
    "rt",
    "embassy",
    "hpm5361",
    "usb-pin-reuse-hpm5300",
] }

panic-halt = "0.2.0"
riscv-rt = "0.12.2"

embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.6.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-graphics = "0.8.1"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
futures-util = { version = "0.3.30", default-features = false }
tinygif = "0.0.4"
heapless = "0.8.0"
micromath = "2.1.0"
embedded-hal-bus = "0.2.0"
assign-resources = "0.4.1"
mcan = "0.5.0"
embassy-sync = "0.6.0"

embassy-usb = { version = "0.2.0", features = [
    "defmt",
    "max-handler-count-8",
    "max-interface-count-8",
] }

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
