[package]
name = "hpm6200evk"
version = "0.1.0"
edition = "2021"

[dependencies]
hpm-hal = { path = "../..", features = ["rt", "embassy", "hpm6280"] }

# embedded helper libraries
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-halt = "0.2.0"
assign-resources = "0.4.1"
heapless = "0.8.0"

# embassy dependencies
embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.6.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.0"

# embedded-hal ecosystem
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-hal-bus = "0.2.0"
