[package]
name = "hpm6200evk"
version = "0.1.0"
edition = "2021"

[dependencies]
hpm-hal = { path = "../..", features = ["rt", "embassy", "hpm6280", "defmt"] }

# embedded helper libraries
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-halt = "1.0.0"
assign-resources = "0.4.1"
heapless = "0.8.0"

# embassy dependencies
embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.6.3", features = [
    # "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.1"

# embedded-hal ecosystem
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-hal-bus = "0.2.0"
riscv = "0.12.1"
andes-riscv = "0.1.2"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
