[package]
name = "hpm6300evk"
version = "0.1.0"
edition = "2021"

[dependencies]
# hpm-metapac = { version = "0.0.3", features = [
#     "hpm6360",
#     "memory-x",
#     "rt",
# ], git = "https://github.com/hpmicro-rs/hpm-metapac.git", tag = "hpm-data-5b7ef7966574b6805c46a0718335f852ab952d60" }
hpm-hal = { path = "../..", features = ["rt", "embassy", "hpm6360"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
panic-halt = "0.2.0"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.12.2", features = ["single-hart"] }

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
