[package]
name = "hpm6300evk"
version = "0.1.0"
edition = "2021"

[dependencies]
# hpm-metapac = { features = [
#     "hpm6360",
#     "memory-x",
#     "rt",
# ], git = "https://github.com/hpmicro-rs/hpm-metapac.git", tag = "hpm-data-caa8fd80439f3ac44e0701c4e6cde71a87128ee6" }
hpm-hal = { path = "../..", features = ["rt", "embassy", "hpm6360"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
andes-riscv = "0.1.2"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
