[package]
name = "hpm6750evkmini"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
#hpm-metapac = { version = "0.0.4", features = [
#    "hpm6750",
#    "memory-x",
#    "rt",
#], git = "https://github.com/hpmicro-rs/hpm-metapac.git", tag = "hpm-data-7b07750284fa2b5b3f6b09c72e70ea6dd4d2231d" }

hpm-hal = { path = "../..", features = ["rt", "embassy", "hpm6750", "chrono"] }

panic-halt = "0.2.0"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "0.12.2", features = ["single-hart"] }
riscv-semihosting = "0.1.0"
embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.6.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
heapless = "0.8.0"
embedded-io = "0.6.1"
futures-util = { version = "0.3.30", default-features = false }
assign-resources = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embassy-usb = { version = "0.3.0", features = [
    "defmt",
    "max-handler-count-8",
    "max-interface-count-8",
] }
usbd-hid = "0.8"
static_cell = "2"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
