[package]
name = "hpm6e00evk"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
hpm-hal = { path = "../../", features = ["hpm6e80"] }

# TODO
# hpm-hal = { path = "../../", features = ["hpm6e80"]}
panic-halt = "0.2.0"
riscv-rt = { version = "0.12.2", features = ["single-hart"] }

defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
heapless = "0.8.0"

embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
