[package]
name = "hpm6e00evk"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
hpm-hal = { path = "../../", features = ["hpm6e80", "rt", "embassy"] }

panic-halt = "0.2.0"

defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
riscv = { version = "0.11.1", features = ["critical-section-single-hart"] }
heapless = "0.8.0"

embassy-time = { version = "0.3.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
embedded-io = "0.6.1"
embedded-graphics = "0.8.1"
futures-util = { version = "0.3.30", default-features = false }
tinygif = "0.0.4"
assign-resources = "0.4.1"
embedded-hal-bus = "0.2.0"
embassy-sync = "0.6.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
